--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
+        "league/csv": "^9.15",
+        "owen-it/laravel-auditing": "^13.6",
+        "spatie/laravel-query-builder": "^5.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
